--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,8 +10,7 @@
     <!-- Bootstrap -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
     <!-- Your scripts -->
-    <script src="js/app.js"></script>
-    <script src="js/app.js"></script>
+   
 </head>
 <body>
     <div class="container">
@@ -39,4 +38,7 @@
 
     
 </body>
+<script src="/src/main/resources/js/apimock.js"></script>
+    <script src="/src/main/resources/js/app.js"></script>
+
 </html>
