--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,8 +10,11 @@
     <!-- Bootstrap -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
     <!-- Your scripts -->
+    <script src="/js/apiclient.js"></script>
     <script src="/js/apimock.js"></script>
     <script src="/js/app.js"></script>
+    
+
    
 </head>
 <body>
