agregue mas cosas en general

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -22,7 +22,7 @@
             <input type="text" class="form-control" id="authorInput" placeholder="Enter author">
         </div>
         <button class="btn btn-primary" onclick="app.getAuthorBlueprints()">Get Blueprints</button>
-        <button class="btn btn-primary" > Create new Blueprint</button>
+        <button class="btn btn-primary" onclick="app.createBluePrint()"> Create new Blueprint</button>
         
         <h3 id="authorName"></h3>
         
